cmake_minimum_required(VERSION 3.30)
project(OOP)
set(CMAKE_CXX_STANDARD 20)

add_executable(OOP
        Lab1/Lab1.cpp
        Lab2/Global.cpp
        Lab2/Global.h
        Lab2/NumberList.cpp
        Lab2/NumberList.h
        Lab2/Student.cpp
        Lab2/Student.h
        Lab2/main.cpp
        Lab3/Problema1/Math.cpp
        Lab3/Problema1/Math.h
        Lab3/Problema1/main.cpp
        Lab3/Problema2/Canvas.cpp
        Lab3/Problema2/Canvas.h
        Lab3/Problema2/main.cpp
        Lab4/Sort.cpp
        Lab4/Sort.h
        Lab4/main.cpp
        Lab5/Number.cpp
        Lab5/Number.h
        Lab5/main.cpp)


